# AI-CodeLint

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  package.json  status.json
.github/workflows/: (draft) release.yaml  deploy-vscode-client.yml  deploy-website.yml  release-desktop-sandbox.yaml  release.yaml
clients/vs-code/: .vscodeignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
desktop-sandbox/: package.json
desktop-sandbox/src/: App.css  App.tsx
desktop-sandbox/src-tauri/: Cargo.toml  tauri.conf.json
lint samples/: README.md  gen.sh  hello.md
lint samples/1. correct/: c01_strlen.c  j02_IsPrime.java  r01_factorial.rs  t02_chunk.ts
lint samples/2. flagged_by_conventional_linters/: c01_unused_variable.c  c02_no_return.c  c03_shadowed_variable.c  j01_empty_catch.java  j02_unused_import.java  j03_string_equality.java  p01_mutable_default.py  p02_none_comparison.py  p03_bare_except.py  r01_unused_variable.rs  r02_unnecessary_mut.rs  r03_len_zero.rs  t01_implicit_any.ts  t02_unused_variable.ts  t03_no_explicit_return.ts
lint samples/3. not_flagged_by_conventional_linters/: c01_signed_unsigned.c  c02_operator_precedence.c  c03_logic_inversion.c  j01_wrong_modulo.java  j02_string_concat_in_loop.java  j03_index_check.java  p01_off_by_one.py  p03_integer_division.py  (+7 more)
scripts/: install.ps1  install.sh
server/: Cargo.toml
server/src/: cli.rs  config.rs  genai.rs  inference.rs  lib.rs  linter.rs  lsp.rs  main.rs
server/src/lsp/: backend.rs  cache.rs  mod.rs
website/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+63 files in other folders)
