[package]
name = "ai-codelint"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
log = "0.4.14"
env_logger = "0.11.5"
rig-core = "0.33.0"
dotenvy = "0.15.7"


