[package]
name = "ai-codelint"
version = "0.0.10"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
log = "0.4.14"
env_logger = "0.11.5"
dashmap = "6.1.0"
async-openai = { version = "0.34.0", features = ["chat-completion", "responses"] }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
clearscreen = "4.0.6"
reqwest = "0.13.2"
semver = "1.0.28"
dotenvy = "0.15.7"
directories = "6.0.0"


